bin/tui/src/snapshots/rushi_tui__snapshot_tests__snap_assistant_thinking_block.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ explain                                                                    │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭────────────────────────────────────────────────────────────────────────────╮ "
" │ thinking                                                                   │ "
" │ Step one: read the question.                                               │ "
" │ Step two: compute the answer.                                              │ "
" │ The answer is 42.                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
