bin/tui/src/snapshots/rushi_tui__snapshot_tests__snap_markdown_blockquote.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ show quote                                                                 │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭────────────────────────────────────────────────────────────────────────────╮ "
" │ A note:                                                                    │ "
" │                                                                            │ "
" │ This is a quoted block                                                     │ "
" │ spanning two lines.                                                        │ "
" │                                                                            │ "
" │ After the quote.                                                           │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
