bin/tui/src/snapshots/rushi_tui__snapshot_tests__snap_markdown_table.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ show table                                                                 │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭────────────────────────────────────────────────────────────────────────────╮ "
" │ Some results:                                                              │ "
" │                                                                            │ "
" │ ┌───────┬───────┐                                                          │ "
" │ │ Name  │ Value │                                                          │ "
" │ ├───────┼───────┤                                                          │ "
" │ │ alpha │ 1     │                                                          │ "
" │ ├───────┼───────┤                                                          │ "
" │ │ beta  │ 2     │                                                          │ "
" │ ├───────┼───────┤                                                          │ "
" │ │ gamma │ 3     │                                                          │ "
" │ └───────┴───────┘                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
