bin/tui/src/snapshots/rushi_tui__snapshot_tests__snap_pending_user_messages.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ first question                                                             │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭────────────────────────────────────────────────────────────────────────────╮ "
" │ answering…                                                                 │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ second question                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ third question                                                             │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  2 messages waiting — follow-up — run after the loop stops                     "
"   1. second question                                                           "
"   2. third question                                                            "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
