bin/tui/src/snapshots/rushi_tui__snapshot_tests__snap_running_loop_indicator.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1──────────────────────────────────────────────────────── [running]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ run build                                                                  │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
"  Building…                                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" [SPINNER]  Working... · 1 msg                                                          "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+C stop · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e ·  "
